--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,5 +57,7 @@ dependencies {
 
     // Timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
+    implementation 'androidx.activity:activity-ktx:1.2.0-alpha06'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
 
 }
