--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,16 @@ dependencies {
     implementation 'androidx.activity:activity-ktx:1.2.0-alpha06'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
 
+
+    // Activity KTX for viewModels()
+    implementation "androidx.activity:activity-ktx:1.1.0"
+
+    // Architectural Components
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+
+
+    // Coroutine Lifecycle Scopes
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
+
 }
