--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/SplashTheme">
+        <activity android:name=".stateflow.StateFlowActivity"></activity>
         <activity
             android:name=".cropimage.CropImageActivity"
             android:theme="@style/Theme.SimpleShortExamples" />
